refactor: modified the code.
Changed some of the classes and their names, for the code maintainability and code compatability.